test/fail/unclosed_parens.zn
# ERRORS: 1
# Unclosed parentheses

func main() {
    var x = (1 + 2
    var valid = (1 + 2)
    return 0
}
